# cartografia

./: .gitignore  README.md  analyse.py
terrain3d/: CMakeLists.txt
terrain3d/data/: center_contours.xyz  full_sheet_contours.xyz
terrain3d/gz_assets/gz_models/building_0000_assumed_a_apeadeiro_em_caminho_de_ferro/: model.config  model.sdf
terrain3d/gz_assets/gz_models/building_0001_assumed_a_apeadeiro_em_caminho_de_ferro/: model.config  model.sdf
terrain3d/gz_assets/gz_models/building_0002_assumed_a_apeadeiro_em_caminho_de_ferro/: model.config  model.sdf
terrain3d/gz_assets/gz_models/building_0003_assumed_a_apeadeiro_em_caminho_de_ferro/: model.config  model.sdf
terrain3d/gz_assets/gz_models/building_0004_assumed_a_apeadeiro_em_caminho_de_ferro/: model.config  model.sdf
terrain3d/gz_assets/gz_models/building_0005_assumed_a_cais_de_acesso_ferroviario/: model.config  model.sdf
terrain3d/gz_assets/gz_models/building_0006_assumed_a_cais_de_acesso_ferroviario/: model.config  model.sdf
terrain3d/gz_assets/gz_models/building_0007_assumed_a_cais_de_acesso_ferroviario/: model.config  model.sdf
terrain3d/gz_assets/gz_models/building_0008_assumed_a_campo_de_jogos/: model.config  model.sdf
terrain3d/gz_assets/gz_models/building_0009_assumed_a_campo_de_jogos/: model.config  model.sdf
terrain3d/gz_assets/gz_models/building_0010_assumed_a_campo_de_jogos/: model.sdf  (+1 more)
terrain3d/scripts/: build_construction_artifacts.py  build_gazebo_building_world.py  extract_center_contours.py  extract_construction_levels.py
terrain3d/src/: terrain_blanket.cpp  terrain_viewer.cpp
(+14679 files in other folders)
